project page update

--- a/projects/index.html
+++ b/projects/index.html
@@ -32,9 +32,9 @@
     </header>
     <section class="projects">
       <div class="weather">
-        <h2>weather.</h2>
-        <a href="https://rachelli13.github.io/weather./"
-          ><img src="../images/iconmonstr-weather-8 1 (1).svg" alt=""
+        <h2>Anime Finder</h2>
+        <a href="https://rachelli13.github.io/AnimeFindr/"
+          ><img src="../images/iconmonstr-television-21 1.svg" alt=""
         /></a>
       </div>
       <div class="fitness">
