--- a/projects/index.html
+++ b/projects/index.html
@@ -40,7 +40,7 @@
       <div class="fitness">
         <h2>Essential Fitness</h2>
         <a href="https://rachelli13.github.io/EssentialFitness/"
-          ><img src="../images/iconmonstr-building-40 1 (3).svg" alt="" />
+          ><img src="../images/iconmonstr-medical-7 1.png" alt="" />
         </a>
       </div>
     </section>
